Brilliant min-height 1px to prevent hors collapse. @chriscoyier is smart.

--- a/sass/_yellowgrid-builder.scss
+++ b/sass/_yellowgrid-builder.scss
@@ -56,6 +56,8 @@
         float: left;
         padding-left: $grid-gutter;
         width: 100%;
+        // so they don't horz collapse
+        min-height: 1px;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
